--- a/app/src/main/res/layout/v_item.xml
+++ b/app/src/main/res/layout/v_item.xml
@@ -33,8 +33,8 @@
                 android:layout_alignParentStart="true" />
 
             <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="68dp"
+                android:layout_height="68dp"
                 android:layout_below="@id/tanggal"
                 android:id="@+id/gambar"
                 android:src="@drawable/default_thumbnail"
@@ -50,6 +50,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp"
                 android:layout_alignTop="@id/gambar"
+                android:textAppearance="?android:textAppearanceMedium"
                 />
 
             <TextView
@@ -59,6 +60,9 @@
                 android:layout_below="@id/judul"
                 android:layout_alignLeft="@id/judul"
                 android:layout_alignStart="@id/judul"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:id="@+id/deskripsi"/>
 
 
