--- a/app/src/main/res/layout/activity_isi_berita.xml
+++ b/app/src/main/res/layout/activity_isi_berita.xml
@@ -4,10 +4,83 @@
     android:id="@+id/activity_isi_berita"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ooi.diloabsensi.IsiBerita">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:id="@+id/gambaracara"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:id="@+id/daftaracarabtn"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/holo_red_dark"
+        android:textColor="@color/white"
+        android:text="@string/daftar"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/gambaracara"
+        android:layout_above="@id/daftaracarabtn">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+            <TextView
+                android:layout_width="100dp"
+                android:text="@string/tanggal"
+                android:layout_height="wrap_content"
+                android:id="@+id/tanggalacara"
+                android:textAppearance="?android:textAppearanceSmall"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:id="@+id/tanggalvalue"
+                android:layout_toRightOf="@id/tanggalacara"
+                android:layout_toEndOf="@id/tanggalacara"/>
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="@string/waktu"
+                android:id="@+id/waktuacara"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:layout_below="@id/tanggalacara"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:id="@+id/waktuvalue"
+                android:layout_toRightOf="@id/waktuacara"
+                android:layout_toEndOf="@id/waktuacara"
+                android:layout_below="@id/tanggalvalue"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:id="@+id/judulacara"
+            android:layout_below="@id/waktuacara"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/deskripsiacara"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:layout_below="@id/judulacara"/>
+
+        </RelativeLayout>
+
+    </ScrollView>
+
 
 </RelativeLayout>
