--- a/app/src/main/res/layout/activity_isi_berita.xml
+++ b/app/src/main/res/layout/activity_isi_berita.xml
@@ -11,7 +11,7 @@
         android:layout_height="180dp"
         android:id="@+id/gambaracara"/>
 
-    <Button
+    <android.support.v7.widget.AppCompatButton
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:id="@+id/daftaracarabtn"
