--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,18 @@
         <item name="colorButtonNormal">@color/primary_darker</item>
     </style>
 
+    <style name="AppTheme.Dark.InputAcara" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:windowBackground">@color/accent</item>
+        <item name="colorControlNormal">@color/primary</item>
+        <item name="colorControlActivated">@color/primary</item>
+        <item name="colorControlHighlight">@color/primary</item>
+        <item name="android:textColorHint">@color/primary</item>
+        <item name="colorButtonNormal">@color/primary_darker</item>
+    </style>
+
     <style name="AppTheme.Dark.Tab" parent="Theme.AppCompat.CompactMenu">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
