--- a/app/src/main/res/layout/activity_berita.xml
+++ b/app/src/main/res/layout/activity_berita.xml
@@ -6,11 +6,18 @@
     android:layout_height="match_parent"
     tools:context="com.ooi.diloabsensi.Berita">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/today"
+        android:textAppearance="?android:textAppearanceMedium"
+        />
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/today">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
