--- a/app/src/main/res/layout/activity_daftar_hadir.xml
+++ b/app/src/main/res/layout/activity_daftar_hadir.xml
@@ -4,10 +4,23 @@
     android:id="@+id/activity_daftar_hadir"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ooi.diloabsensi.DaftarHadir">
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefreshhadir"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="none"
+            android:id="@+id/rvhadir"
+            android:background="@android:color/transparent"
+            />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </RelativeLayout>
